--- a/index.html
+++ b/index.html
@@ -10,126 +10,121 @@
 <body>
     <!--шапка-->
     <header class="link">
-        <nav class="main-nav section">
+        <nav class="main-nav container">
             <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#000000;">Studio</span></span></a>
                 <ul class="list-line list">
                     <li class="item"><a href=""><span class="header-text current">Студия</span></a></li>
                     <li class="item"><a href="./portfolio.html"><span class="header-text">Портфолио</span></a></li>
                     <li class="item"><a href=""><span class="header-text">Контакты</span></a></li>
                 </ul>
-                    <ul class="auth-nav list">
+                    <ul class="auth-nav list-header">
                         <li class="item"><a href="mailto:info@devstudio.com"><span class="contact">info@devstudio.com</span></a></li>
                         <li class="item"><a href="tel:+380961111111"> <span class="contact">+38 096 111 11 11</span></a></li>
                     </ul>
         </nav>
     </header>
 <main class="link">
-    <!--Заказать услугу-->
+    <!--hero-->
     <section class="hero">
         <h1 class="efect-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
         <div class="button-centered">
             <a href="" class="button-hero">Заказать услугу</a>
         </div>
     </section>
-    <!--иконки-->
-    <section>
-        <div class="section">
-            <ul class="icon-style">
-                <li class="item">
-                    <div class="icon">
-                        <img src="./picture/4picture/Group.svg" alt="">
-                    </div>
-                    <h3 class="subtitle-text">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                    <p class="main-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li class="item">
-                    <div class="icon">
-                        <img src="./picture/4picture/clock1.svg" alt="">
-                    </div>
-                    <h3 class="subtitle-text">ПУНКТУАЛЬНОСТЬ</h3>
-                    <p class="main-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li class="item">
-                    <div class="icon">
-                        <img src="./picture/4picture/diagram1.svg" alt="">
-                    </div>
-                    <h3 class="subtitle-text">ПЛАНИРОВАНИЕ</h3>
-                    <p class="main-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li class="item">
-                    <div class="icon">
-                        <img src="./picture/4picture/astronaut1.svg" alt="">
-                    </div>
-                    <h3 class="subtitle-text">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                    <p class="main-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <!--Занятия-->
-    <section>
-        <div class="section">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul class="list-project">
-                <li class="item"><img src="./picture/png/nout.png" alt=""><span class="subtitle-text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</span></li>
-                <li class="item"><img src="./picture/png/telephon.png" alt=""><span class="subtitle-text">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</span></li>
-                <li class="item"><img src="./picture/png/television.png" alt=""><span class="subtitle-text">ДИЗАЙНЕРСКИЕ РЕШЕНИЕ</span></li>
-            </ul>
-        </div>
-    </section>
-    <!--Команда-->
-    <section>
-        <div class="section">
-            <div class="section-comand">
-                <h2 class="section-title">Наша команда</h2>
-                <ul class="comand-style">
-                    <li class="item-border"> <img src="./picture/people/1.jpg" alt="Николай Кучеренко">
-                        <h3 class="contact-subtitle">Николай Кучеренко</h3>
-                            <p class="contact-text">Product Designer</p>
-                                <ul class="list-soc">
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="instagram"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="twitter"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="twitter"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
-                                </ul>
+        <!--иконки-->
+        <section class="container" style="padding-top: 95px; padding-bottom: 95px;">
+                <ul class="icon-style">
+                    <li class="item">
+                        <div class="icon">
+                            <img src="./picture/4picture/Group.svg" alt="">
+                        </div>
+                        <h3 class="subtitle-text">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                        <p class="icon-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="item-border"> <img src="./picture/people/2.jpg" alt="Ольга Ивановна">
-                        <h3 class="contact-subtitle">Ольга Иванова</h3>
-                            <p class="contact-text">Frontend Developer</p>
-                                <ul class="list-soc">
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="instagram"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="twitter"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="facebook"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
-                                </ul>
+                    <li class="item">
+                        <div class="icon">
+                            <img src="./picture/4picture/clock1.svg" alt="">
+                        </div>
+                        <h3 class="subtitle-text">ПУНКТУАЛЬНОСТЬ</h3>
+                        <p class="icon-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="item-border"> <img src="./picture/people/3.jpg" alt="Андрей Шевченко">
-                        <h3 class="contact-subtitle">Андрей Шевченко</h3>
-                            <p class="contact-text">Marketing</p>
-                                <ul class="list-soc">
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="twitter"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="instagram"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="facebook"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
-                                </ul>
+                    <li class="item">
+                        <div class="icon">
+                            <img src="./picture/4picture/diagram1.svg" alt="">
+                        </div>
+                        <h3 class="subtitle-text">ПЛАНИРОВАНИЕ</h3>
+                        <p class="icon-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="item-border"> <img src="./picture/people/4.jpg" alt="Иван Николаев">
-                        <h3 class="contact-subtitle">Иван Николаев</h3>
-                            <p class="contact-text">UI Designer</p>
-                                <ul class="list-soc">
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="instagram"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="twitter"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="facebook   "></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
-                                </ul>
+                    <li class="item">
+                        <div class="icon">
+                            <img src="./picture/4picture/astronaut1.svg" alt="">
+                        </div>
+                        <h3 class="subtitle-text">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                        <p class="icon-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
-            </div>
-        </div>
-    </section>
-    <!--клиенты-->
-        <section>
-            <div class="section">
+        </section>
+        <!--Занятия-->
+        <section class="container" style="padding-bottom: 95px;">
+                <h2 class="section-title">Чем мы занимаемся</h2>
+                <ul class="list-project">
+                    <li class="item"><img src="./picture/png/nout.png" alt=""><span class="subtitle-text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</span></li>
+                    <li class="item"><img src="./picture/png/telephon.png" alt=""><span class="subtitle-text">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</span></li>
+                    <li class="item"><img src="./picture/png/television.png" alt=""><span class="subtitle-text">ДИЗАЙНЕРСКИЕ РЕШЕНИЕ</span></li>
+                </ul>
+        </section>
+        <!--Команда-->
+        <section class="comand">
+                <div class="container">
+                    <div class="section-comand">
+                        <h2 class="section-title">Наша команда</h2>
+                        <ul class="comand-list">
+                            <li class="item-border"> <img src="./picture/people/1.jpg" alt="Николай Кучеренко">
+                                <h3 class="contact-subtitle">Николай Кучеренко</h3>
+                                    <p class="contact-text">Product Designer</p>
+                                        <ul class="list-soc">
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="instagram"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="twitter"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="twitter"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
+                                        </ul>
+                            </li>
+                            <li class="item-border"> <img src="./picture/people/2.jpg" alt="Ольга Ивановна">
+                                <h3 class="contact-subtitle">Ольга Иванова</h3>
+                                    <p class="contact-text">Frontend Developer</p>
+                                        <ul class="list-soc">
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="instagram"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="twitter"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="facebook"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
+                                        </ul>
+                            </li>
+                            <li class="item-border"> <img src="./picture/people/3.jpg" alt="Андрей Шевченко">
+                                <h3 class="contact-subtitle">Андрей Шевченко</h3>
+                                    <p class="contact-text">Marketing</p>
+                                        <ul class="list-soc">
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="twitter"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="instagram"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="facebook"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
+                                        </ul>
+                            </li>
+                            <li class="item-border"> <img src="./picture/people/4.jpg" alt="Иван Николаев">
+                                <h3 class="contact-subtitle">Иван Николаев</h3>
+                                    <p class="contact-text">UI Designer</p>
+                                        <ul class="list-soc">
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="instagram"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="twitter"></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="facebook   "></a></li>
+                                            <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
+                                        </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+        </section>
+        <!--клиенты-->
+        <section class="container" style="padding-top: 95px; padding-bottom: 95px;">
                 <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="list-сustomer">
                     <li class="item"><img src="./picture/customer/Client1.svg" alt=""></li>
@@ -139,13 +134,12 @@
                     <li class="item"><img src="./picture/customer/Client5.svg" alt=""></li>
                     <li class="item"><img src="./picture/customer/Client6.svg" alt=""></li>
                 </ul>
-            </div>
         </section>
 </main>
     <footer class="link">
-        <div class="section">
+        <div class="container footer">
             <div class="footer-section">
-                <a href=""> <span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
+                <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
                     <address>
                         <ul class="footer-adress">
                             <li class="item">г. Киев, пр-т Леси Украинки, 26</li>
@@ -165,7 +159,7 @@
             </div>
             <div class="footer-link">
                 <h3 class="subtitle-text">ПРИСОЙДЕНИТЕСЬ НА РАССЫЛКУ</h3>
-                <a href=""  class="button">подписаться</a>
+                <a href="" class="button">подписаться</a>
             </div>
         </div>
     </footer>
