--- a/portfolio.html
+++ b/portfolio.html
@@ -10,14 +10,14 @@
 <body>
 <!--шапка-->
 <header class="link">
-    <nav class="main-nav section">
+    <nav class="main-nav container">
         <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#000000;">Studio</span></span></a>
             <ul class="list-line list">
                 <li class="item"><a href="./index.html"><span class="header-text">Студия</span></a></li>
                 <li class="item"><a href=""><span class="header-text current">Портфолио</span></a></li>
                 <li class="item"><a href=""><span class="header-text">Контакты</span></a></li>
             </ul>
-                <ul class="auth-nav list">
+                <ul class="auth-nav list-header">
                     <li class="item"><a href="mailto:info@devstudio.com"><span class="contact">info@devstudio.com</span></a></li>
                     <li class="item"><a href="tel:+380961111111"> <span class="contact">+38 096 111 11 11</span></a></li>
                 </ul>
@@ -27,33 +27,32 @@
 <!--Кнопки-->
         <section class="button-margin">
             <ul class="button-list">
-                <li class="item"><button class="button-portfolio" style="width: 73px;">Все</button></li>
-                <li class="item"><button class="button-portfolio" style="width: 128px;">Веб-сайты</button></li>
-                <li class="item"><button class="button-portfolio" style="width: 145px;">Приложения</button></li>
-                <li class="item"><button class="button-portfolio" style="width: 103px;">Дизайн</button></li>
-                <li class="item"><button class="button-portfolio" style="width: 130px;">Маркетинг</button></li>
+                <li class="item"><button class="button-portfolio">Все</button></li>
+                <li class="item"><button class="button-portfolio">Веб-сайты</button></li>
+                <li class="item"><button class="button-portfolio">Приложения</button></li>
+                <li class="item"><button class="button-portfolio">Дизайн</button></li>
+                <li class="item"><button class="button-portfolio">Маркетинг</button></li>
             </ul>
         </section>
 <!--Главный контент-->
-        <section class="section">
-            <ul class="list portfolio-list">
-                <li class="item"><a href=""><img src="./picture/portfolio/img-1.png" alt=""></a><h3 class="portfolio-subtitle">Технокряк</h3><span class="portfolio-text">Веб-сайт</span></li>
-                <li class="item"><a href=""><img src="./picture/portfolio/img-2.png" alt=""></a><h3 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h3><span class="portfolio-text">Дизайн</span></li>
-                <li class="item"><a href=""><img src="./picture/portfolio/img-3.png" alt=""></a><h3 class="portfolio-subtitle">Ресторан Seafood</h3><span class="portfolio-text">Приложение</span></li>
-                <li class="item"><a href=""><img src="./picture/portfolio/img-4.png" alt=""></a><h3 class="portfolio-subtitle">Проект Prime</h3><span class="portfolio-text">Маркетинг</span></li>
-                <li class="item"><a href=""><img src="./picture/portfolio/img-5.png" alt=""></a><h3 class="portfolio-subtitle">Проект Boxes</h3><span class="portfolio-text">Приложение</span></li>
-                <li class="item"><a href=""><img src="./picture/portfolio/img-6.png" alt=""></a><h3 class="portfolio-subtitle">Inspiration has no Borders</h3><span class="portfolio-text">Веб-сайт</span></li>
-                <li class="item"><a href=""><img src="./picture/portfolio/img-7.png" alt=""></a><h3 class="portfolio-subtitle">Издание Limited Edition</h3><span class="portfolio-text">Дизайн</span></li>
-                <li class="item"><a href=""><img src="./picture/portfolio/img-8.png" alt=""></a><h3 class="portfolio-subtitle">Проект LAB</h3><span class="portfolio-text">Маркетинг</span></li>
-                <li class="item"><a href=""><img src="./picture/portfolio/img-9.png" alt=""></a><h3 class="portfolio-subtitle">Growing Business</h3><span class="portfolio-text">Приложение</span></li>
+        <section class="container-portfolio">
+            <ul class="link list portfolio-list">
+                <li class="item"><a href=""><img src="./picture/portfolio/img-1.png" alt=""><h3 class="portfolio-subtitle">Технокряк</h3><p class="portfolio-text">Веб-сайт</p></a></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-2.png" alt=""><h3 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h3><p class="portfolio-text">Дизайн</p></a></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-3.png" alt=""><h3 class="portfolio-subtitle">Ресторан Seafood</h3><p class="portfolio-text">Приложение</p></a></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-4.png" alt=""><h3 class="portfolio-subtitle">Проект Prime</h3><p class="portfolio-text">Маркетинг</p></a></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-5.png" alt=""><h3 class="portfolio-subtitle">Проект Boxes</h3><p class="portfolio-text">Приложение</p></a></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-6.png" alt=""><h3 class="portfolio-subtitle">Inspiration has no Borders</h3><p class="portfolio-text">Веб-сайт</p></a></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-7.png" alt=""><h3 class="portfolio-subtitle">Издание Limited Edition</h3><p class="portfolio-text">Дизайн</p></a></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-8.png" alt=""><h3 class="portfolio-subtitle">Проект LAB</h3><p class="portfolio-text">Маркетинг</p></a></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-9.png" alt=""><h3 class="portfolio-subtitle">Growing Business</h3><p class="portfolio-text">Приложение</p></a></li>
             </ul>
         </section>
     </main>
     <footer class="link">
-        <div class="section">
+        <div class="container footer">
             <div class="footer-section">
-                <a href=""> <span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
-<!--Адресс-->
+                <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
                     <address>
                         <ul class="footer-adress">
                             <li class="item">г. Киев, пр-т Леси Украинки, 26</li>
@@ -62,7 +61,6 @@
                         </ul>
                     </address>
             </div>
-<!--Присойденяйтесь-->
             <div class="footer-soc">
                 <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНЯЙТЕСЬ</h3>
                     <ul class="list-soc">
@@ -72,10 +70,9 @@
                         <li class="item"><img src="./picture/soc/footer-Ellipse4.svg" alt=""></li>
                     </ul>
             </div>
-<!--Рассылка-->
             <div class="footer-link">
                 <h3 class="subtitle-text">ПРИСОЙДЕНИТЕСЬ НА РАССЫЛКУ</h3>
-                <a href=""  class="button">подписаться</a>
+                <a href="" class="button">подписаться</a>
             </div>
         </div>
     </footer>
