--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body>
 <!--шапка-->
 <header class="link">
-    <nav class="main-nav container">
+    <nav class="main-nav header-container">
         <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#000000;">Studio</span></span></a>
             <ul class="list-line list">
                 <li class="item"><a href="./index.html"><span class="header-text">Студия</span></a></li>
@@ -50,7 +50,7 @@
         </section>
     </main>
     <footer class="link">
-        <div class="container footer">
+        <div class="footer-container footer">
             <div class="footer-section">
                 <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
                     <address>
