--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!--шапка-->
     <header class="link">
-        <nav class="main-nav container">
+        <nav class="main-nav header-container">
             <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#000000;">Studio</span></span></a>
                 <ul class="list-line list">
                     <li class="item"><a href=""><span class="header-text current">Студия</span></a></li>
@@ -32,7 +32,7 @@
         </div>
     </section>
         <!--иконки-->
-        <section class="container" style="padding-top: 95px; padding-bottom: 95px;">
+        <section class="icon-container">
                 <ul class="icon-style">
                     <li class="item">
                         <div class="icon">
@@ -65,7 +65,7 @@
                 </ul>
         </section>
         <!--Занятия-->
-        <section class="container" style="padding-bottom: 95px;">
+        <section class="project-container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="list-project">
                     <li class="item"><img src="./picture/png/nout.png" alt=""><span class="subtitle-text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</span></li>
@@ -75,7 +75,7 @@
         </section>
         <!--Команда-->
         <section class="comand">
-                <div class="container">
+                <div class="comand-container">
                     <div class="section-comand">
                         <h2 class="section-title">Наша команда</h2>
                         <ul class="comand-list">
@@ -124,7 +124,7 @@
                 </div>
         </section>
         <!--клиенты-->
-        <section class="container" style="padding-top: 95px; padding-bottom: 95px;">
+        <section class="costomer-container">
                 <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="list-сustomer">
                     <li class="item"><img src="./picture/customer/Client1.svg" alt=""></li>
@@ -137,7 +137,7 @@
         </section>
 </main>
     <footer class="link">
-        <div class="container footer">
+        <div class="footer-container footer">
             <div class="footer-section">
                 <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
                     <address>
@@ -149,7 +149,7 @@
                     </address>
             </div>
             <div class="footer-soc">
-                <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНЯЙТЕСЬ</h3>
+                <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЕДИНЯЙТЕСЬ</h3>
                     <ul class="list-soc">
                         <li class="item"><img src="./picture/soc/footer-Ellipse1.svg" alt="instagram"></li>
                         <li class="item"><img src="./picture/soc/footer-Ellipse2.svg" alt="twitter"></li>
@@ -158,7 +158,7 @@
                     </ul>
             </div>
             <div class="footer-link">
-                <h3 class="subtitle-text">ПРИСОЙДЕНИТЕСЬ НА РАССЫЛКУ</h3>
+                <h3 class="subtitle-text">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
                 <a href="" class="button">подписаться</a>
             </div>
         </div>
