--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
     </header>
 <main class="link">
     <!--hero-->
-    <section class="hero">
-        <h1 class="efect-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <div class="button-centered">
-            <a href="" class="button-hero">Заказать услугу</a>
+    <section>
+        <div class="hero">
+            <h1 class="efect-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <div class="button-centered">
+                <a href="" class="button-hero">Заказать услугу</a>
+            </div>
         </div>
     </section>
         <!--иконки-->
-        <section class="icon-container">
+        <section>
+            <div class="icon-container">
                 <ul class="icon-style">
                     <li class="item">
                         <div class="icon">
@@ -63,15 +66,18 @@
                         <p class="icon-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
+            </div>
         </section>
         <!--Занятия-->
-        <section class="project-container">
+        <section>
+            <div class="project-container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="list-project">
                     <li class="item"><img src="./picture/png/nout.png" alt=""><span class="subtitle-text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</span></li>
                     <li class="item"><img src="./picture/png/telephon.png" alt=""><span class="subtitle-text">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</span></li>
                     <li class="item"><img src="./picture/png/television.png" alt=""><span class="subtitle-text">ДИЗАЙНЕРСКИЕ РЕШЕНИЕ</span></li>
                 </ul>
+            </div>
         </section>
         <!--Команда-->
         <section class="comand">
@@ -124,16 +130,18 @@
                 </div>
         </section>
         <!--клиенты-->
-        <section class="costomer-container">
-                <h2 class="section-title">Постоянные клиенты</h2>
-                <ul class="list-сustomer">
-                    <li class="item"><img src="./picture/customer/Client1.svg" alt=""></li>
-                    <li class="item"><img src="./picture/customer/Client2.svg" alt=""></li>
-                    <li class="item"><img src="./picture/customer/Client3.svg" alt=""></li>
-                    <li class="item"><img src="./picture/customer/Client4.svg" alt=""></li>
-                    <li class="item"><img src="./picture/customer/Client5.svg" alt=""></li>
-                    <li class="item"><img src="./picture/customer/Client6.svg" alt=""></li>
-                </ul>
+        <section>
+                <div class="costomer-container">
+                    <h2 class="section-title">Постоянные клиенты</h2>
+                    <ul class="list-сustomer">
+                        <li class="item"><img src="./picture/customer/Client1.svg" alt=""></li>
+                        <li class="item"><img src="./picture/customer/Client2.svg" alt=""></li>
+                        <li class="item"><img src="./picture/customer/Client3.svg" alt=""></li>
+                        <li class="item"><img src="./picture/customer/Client4.svg" alt=""></li>
+                        <li class="item"><img src="./picture/customer/Client5.svg" alt=""></li>
+                        <li class="item"><img src="./picture/customer/Client6.svg" alt=""></li>
+                    </ul>
+                </div>
         </section>
 </main>
     <footer class="link">
