--- a/portfolio.html
+++ b/portfolio.html
@@ -25,14 +25,16 @@
 </header>
     <main>
 <!--Кнопки-->
-        <section class="button-margin">
-            <ul class="button-list">
-                <li class="item"><button class="button-portfolio">Все</button></li>
-                <li class="item"><button class="button-portfolio">Веб-сайты</button></li>
-                <li class="item"><button class="button-portfolio">Приложения</button></li>
-                <li class="item"><button class="button-portfolio">Дизайн</button></li>
-                <li class="item"><button class="button-portfolio">Маркетинг</button></li>
-            </ul>
+        <section class="portfolio-button">
+            <div class="button-margin">
+                <ul class="button-list">
+                    <li class="item"><button class="button-portfolio">Все</button></li>
+                    <li class="item"><button class="button-portfolio">Веб-сайты</button></li>
+                    <li class="item"><button class="button-portfolio">Приложения</button></li>
+                    <li class="item"><button class="button-portfolio">Дизайн</button></li>
+                    <li class="item"><button class="button-portfolio">Маркетинг</button></li>
+                </ul>
+            </div>
         </section>
 <!--Главный контент-->
         <section class="container-portfolio">
