--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
 <main class="link">
     <!--hero-->
-    <section>
-        <div class="hero">
+    <section class="hero">
+        <div>
             <h1 class="efect-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <div class="button-centered">
                 <a href="" class="button-hero">Заказать услугу</a>
@@ -34,7 +34,7 @@
         </div>
     </section>
         <!--иконки-->
-        <section>
+        <section class="icon-section">
             <div class="icon-container">
                 <ul class="icon-style">
                     <li class="item">
@@ -69,7 +69,7 @@
             </div>
         </section>
         <!--Занятия-->
-        <section>
+        <section class="project">
             <div class="project-container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="list-project">
@@ -130,7 +130,7 @@
                 </div>
         </section>
         <!--клиенты-->
-        <section>
+        <section class="costomer">
                 <div class="costomer-container">
                     <h2 class="section-title">Постоянные клиенты</h2>
                     <ul class="list-сustomer">
