--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <!--шапка-->
-<header class="link">
-    <nav class="main-nav header-container">
+<header class="link header">
+    <nav class="main-nav container">
         <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#000000;">Studio</span></span></a>
             <ul class="list-line list">
                 <li class="item"><a href="./index.html"><span class="header-text">Студия</span></a></li>
@@ -51,8 +51,8 @@
             </ul>
         </section>
     </main>
-    <footer class="link">
-        <div class="footer-container footer">
+    <footer class="link footer">
+        <div class="container footer-list">
             <div class="footer-section">
                 <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
                     <address>
@@ -64,7 +64,7 @@
                     </address>
             </div>
             <div class="footer-soc">
-                <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНЯЙТЕСЬ</h3>
+                <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЕДИНЯЙТЕСЬ</h3>
                     <ul class="list-soc">
                         <li class="item"><img src="./picture/soc/footer-Ellipse1.svg" alt="instagram"></li>
                         <li class="item"><img src="./picture/soc/footer-Ellipse2.svg" alt="twitter"></li>
@@ -73,7 +73,7 @@
                     </ul>
             </div>
             <div class="footer-link">
-                <h3 class="subtitle-text">ПРИСОЙДЕНИТЕСЬ НА РАССЫЛКУ</h3>
+                <h3 class="subtitle-text">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
                 <a href="" class="button">подписаться</a>
             </div>
         </div>
