--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <!--шапка-->
-    <header class="link">
-        <nav class="main-nav header-container">
+    <header class="link header">
+        <nav class="main-nav container">
             <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#000000;">Studio</span></span></a>
                 <ul class="list-line list">
                     <li class="item"><a href=""><span class="header-text current">Студия</span></a></li>
@@ -35,7 +35,7 @@
     </section>
         <!--иконки-->
         <section class="icon-section">
-            <div class="icon-container">
+            <div class="container">
                 <ul class="icon-style">
                     <li class="item">
                         <div class="icon">
@@ -70,7 +70,7 @@
         </section>
         <!--Занятия-->
         <section class="project">
-            <div class="project-container">
+            <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="list-project">
                     <li class="item"><img src="./picture/png/nout.png" alt=""><span class="subtitle-text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</span></li>
@@ -81,7 +81,7 @@
         </section>
         <!--Команда-->
         <section class="comand">
-                <div class="comand-container">
+                <div class="container">
                     <div class="section-comand">
                         <h2 class="section-title">Наша команда</h2>
                         <ul class="comand-list">
@@ -131,7 +131,7 @@
         </section>
         <!--клиенты-->
         <section class="costomer">
-                <div class="costomer-container">
+                <div class="container">
                     <h2 class="section-title">Постоянные клиенты</h2>
                     <ul class="list-сustomer">
                         <li class="item"><img src="./picture/customer/Client1.svg" alt=""></li>
@@ -144,8 +144,8 @@
                 </div>
         </section>
 </main>
-    <footer class="link">
-        <div class="footer-container footer">
+    <footer class="link footer">
+        <div class="container footer-list">
             <div class="footer-section">
                 <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
                     <address>
